new FAQ section, with an Q/A about Permgen space error