@@ -101,7 +101,12 @@ connected by running the following:
 It's recommended to install [watchman][9] to take advantage of the Buck
 daemon: `buckd`.
 
-## License
+## FAQ ##
+
+* Q: I can't build/test/package the project because of a `PermGen space` error.
+* A: Create a `build.properties` file in the project root directory with the following: `org.gradle.jvmargs=-XX:MaxPermSize=1024m`.
+
+## License ##
 
 WordPress for Android is an Open Source project covered by the
 [GNU General Public License version 2](LICENSE.md). Note: code
